Show users and questions by category, angular component question-body.component.html

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
@@ -8,13 +8,24 @@
         <br />
     </div>
     <div class="row">
-        <button type="button" class="btn btn-default">Follow</button>
+        <button type="button" (click)="addFollower(categorySelected.id)" class="btn btn-default">Follow</button>
     </div>
     <div class="row">
         <p>
             {{categorySelected?.description}}
         </p>
     </div>
+    <br />
+    <div class="row">
+        <table class="table table-bordered" width="200">
+            <tr>
+                <td>{{totalCount?.totalQuestions}} Questions</td>
+                <td>{{totalCount?.totalFollowers}} Followers</td>
+             </tr>
+       </table>
+    </div>
+
+    
     <div class="clearfix"></div>
 </div>
 <div     infinite-scroll
