Profiles view profile functionality added

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/eidtprofile/editprofile.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/eidtprofile/editprofile.component.html
@@ -1,5 +1,5 @@
-﻿<ap-navdashboard></ap-navdashboard>
-<dash-tab></dash-tab>
+﻿<!--<ap-navdashboard></ap-navdashboard>
+<dash-tab></dash-tab>-->
 <div class="row dash-panel">
     <!--<div class="col-lg-2"> space</div>-->
 
@@ -29,7 +29,7 @@
         <div class="description">
             <h1>User</h1>
             <p>
-                Conceptually ksdjfklsdf sdlfjksldkjfj sdfjsd sdjfsd fsdjfpsdjf spdjds pfjsdpfosjd fojsdpofjsdofjsp dofjpsodj psodfpsdojfpsdfjspdfojsdsdp jfspdf sdspdo jfpsdojf psdjf psdfjspdfjspdofjspdofjspdojfpsdofjpsdofjspdofjpsdjfsdpfj
+                
             </p>
         </div>
         <div class="progresstitle">
@@ -38,7 +38,6 @@
         <div class="progress-image">
             <img class="progress-bar-img" src="../images/border-horizontal.png" />
             <img class="progress-background" src="../images/border-horizontal.png" />
-
         </div>
         <div class="status-list">
             <div class="row">
