show logged in user

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Views/Home/Index.cshtml
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Views/Home/Index.cshtml
@@ -18,7 +18,7 @@ else
         <app username="">Loading ...</app>
     </div>*@
     <div class="body-minHeight">
-        <app username="'Rafael yonda'">Loading ...</app>
+        <app>Loading ...</app>
     </div>
 }
 
