--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/nav/question-nav.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/nav/question-nav.component.html
@@ -25,9 +25,36 @@
             <li><a routerLink="/learn">Learn</a></li>
             <li><a routerLink="/project">Project</a></li>            
         </ul>
-        <ul class="nav navbar-nav navbar-right">
+        <ul class="nav navbar-nav navbar-right"  *ngIf="!_logObj.isLoggedIn">
             <li><a href="#">Log in</a></li>
             <li><a href="#">Register</a></li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right" *ngIf="_logObj.isLoggedIn">
+            <li>
+                <a href="#" class="dropdown-toggle fixed-height" data-toggle="dropdown" aria-expanded="false">
+                    <img class="user-image" src="{{_logObj.user.imageUrl}}" />{{_logObj.user.name}}
+                </a>
+                <!-- ======= -->
+
+                <div class="dropdown-menu dropdown-menu-right" role="menu">
+                    <form class="form-horizontal" role="form">
+                        <div class="form-group">
+                            <div class="lef-column padding-middle"><span class="fa fa-user"></span> <a routerLink="/dashboard" for="contain" data-toggle="dropdown" (click)="goToDashBoard" class="padding-middle"> Profile </a></div>
+
+                        </div>
+                        <div class="form-group">
+                            <div class="lef-column padding-middle"><span class="fa fa-sign-out"></span> <a href="/questions/getcategory" for="contain" class="padding-middle"> Manage Categories </a></div>
+
+                        </div>
+                        <div class="form-group">
+                            <div class="lef-column padding-middle"><span class="fa fa-sign-out"></span> <a href="/signout" for="contain" class="padding-middle" (click)="LogOut()"> Sign Out </a></div>
+
+                        </div>
+                    </form>
+                </div>
+                <!-- ======== -->
+
+            </li>
         </ul>
     </div>
 </div>
