--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
@@ -25,8 +25,8 @@
        </table>
     </div>
     <div class="row pull-left">
-        <a class="active" onclick=""> Questions </a>                 
-        <a onclick="">  Answers </a>      
+        <a class="active" (click)="getQuestionNotAnswered(categorySelected.id)" > Questions </a>                 
+        <a (click)="getQuestionsAnswered(categorySelected.id)" >  Answers </a>      
     </div>
 
     
