Profile show uploaded image

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/viewprofile.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/viewprofile.component.html
@@ -1,7 +1,7 @@
 ﻿<div class="row dash-panel">
     <div class="col-lg-2 col-md-offset-2">
         <div class="profile-pic">
-            <img class="profile-img" src="../images/userAdd.png" />
+            <img class="profile-img" src="{{imageLink}}" />
         </div>
         <img class="profile-border" src="../images/border-horizontal.png" />
     </div>
