--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/eidtprofile/editprofile.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/eidtprofile/editprofile.component.html
@@ -6,7 +6,7 @@
     <div class="col-lg-2 col-md-offset-2">
         <div class="left-panel">
             <div class="profile-pic">
-                <img class="profile-img" src="../images/userAdd.png" />
+                <img class="profile-img" src="{{imageLink}}" />
                 <div class="row title">Photo Edit</div>
             </div>
             <img class="profile-border" src="../images/border-horizontal.png" />
