Question hover background change

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site.less
@@ -15,6 +15,7 @@
 @import "site/contextmenu.less";
 @import "site/z-index-schem";
 /*General shared*/
+@import "site/question-panel";
 @import "site/image-border";
 .right-border{
     border-right:1px solid;
