--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/layout.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/layout.less
@@ -14,10 +14,10 @@ body {
 }
 
 
-.row [class*="col-"]{
-  margin-bottom: -99999px;
-  padding-bottom: 99999px;
-}
+// .row [class*="col-"]{
+//   margin-bottom: -99999px;
+//   padding-bottom: 99999px;
+// }
 
 .row{
   overflow: hidden; 
