--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/social-bar.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/social-bar.less
@@ -23,8 +23,6 @@
 .left-border {
     float: left;
 }
-.questions-container {
-    position: relative;
-    padding:0;
-    margin:0;
-}
+/*.questions-container {
+    
+}*/
