--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-left-menu/question-left-menu.css
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-left-menu/question-left-menu.css
@@ -1,27 +1,36 @@
 ﻿.question-title {
-    
 }
-.question-title>h3{
-    margin-bottom:-10px;
-    margin-top:0;
-}
+
+    .question-title > h3 {
+        margin-bottom: -10px;
+        margin-top: 0;
+    }
 
 .category-list {
     color: #F6912B;
 }
 
-a{
-    font-weight:600;
+a {
+    font-weight: 600;
 }
 
 .menu-container {
     float: right;
     text-align: left;
     padding: 10px;
-    margin-top: 50px;
+    margin-top: 20px;
     width: 60%;
     font-size: 12px;
+    padding-right: 35px;
 }
-.question-list>a{
-    display:block;
+
+.question-list > a {
+    display: block;
+}
+
+ul {
+    padding-left: 25px;
+}
+.category-title{
+
 }
