--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
@@ -1,35 +1,48 @@
-﻿<div class="loader" *ngIf="loader.isLoading"></div>
-<div     infinite-scroll
-         [infiniteScrollDistance]="scrollDistance"
-         [infiniteScrollThrottle]="throttle"
-         (scrolled)="onScrollDown()">
+﻿
+<div class="row">
+    <div class="col-md-3">
+        <question-left-menu></question-left-menu>
+    </div>
 
-    <div *ngFor="let question of questions" class="questions-container">
-        <div class="left-border">
-            <img class="image-border" src="../../../../images/border.png" />
-        </div>
-        <div class="question-contents">
-            <h3><a [routerLink]="['/question/detail',question.id]">&iquest;{{question.title}}?</a> </h3>
-            <div>
-                Categories: <h5 *ngFor="let c of question.categories" class="subtitle">{{c?.category.name}},&nbsp; </h5>
-            </div>            
-            <div class="row ">
+    <div class="col-md-9">
+        <div class="loader" *ngIf="loader.isLoading"></div>
 
-                <div class="article-details">
-                    <img class="user-image" src="../../../../images/avatar.png" />
-                    <!--<div class="header-info">{{question.user.name}},{{question.user.occupassion}}</div>-->
-                    <p [innerHTML]="question.body" class="answer-text"></p>
+        <div infinite-scroll
+             [infiniteScrollDistance]="scrollDistance"
+             [infiniteScrollThrottle]="throttle"
+             (scrolled)="onScrollDown()" class="col-md-9">
+
+            <div *ngFor="let question of questions" class="questions-container">
+                <div class="left-border">
+                    <img class="image-border" src="../../../../images/border.png" />
+                </div>
+                <div class="question-contents">
+                    <h3><a [routerLink]="['/question/detail',question.id]">&iquest;{{question.title}}?</a> </h3>
+                    <div>
+                        Categories: <h5 *ngFor="let c of question.categories" class="subtitle">{{c?.category.name}},&nbsp; </h5>
+                    </div>
+                    <div class="row ">
+                        <div class="article-details">
+                            <img class="user-image" src="../../../../images/avatar.png" />
+                            <!--<div class="header-info">{{question.user.name}},{{question.user.occupassion}}</div>-->
+                            <p [innerHTML]="question.body" class="answer-text"></p>
+                        </div>
+                    </div>
+                    <hr />
                 </div>
             </div>
-            <hr />
+
         </div>
     </div>
+
 </div>
 
-<!-- ==========Modal======= -->
+
+
+
+   <!-- ==========Modal======= -->
 <div class="modal fade" id="myModal" role="dialog">
     <div class="modal-dialog">
-
         <!-- Modal content-->
         <div class="modal-content">
             <div class="modal-header">
@@ -45,3 +58,4 @@
         </div>
     </div>
 </div>
+
