--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-home.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-home.component.html
@@ -24,14 +24,10 @@
 <div class="row  body-padding">
     <apq-nav></apq-nav>
     <ap-search placeBottom="top-fixed" ></ap-search>
-    
-    <div class="col-md-3">
-        <question-left-menu></question-left-menu>
-    </div>
-    <div class="col-md-6">
+
+    <div class="col-md-9">
         <router-outlet></router-outlet>          
     </div>
-    <div class="col-md-3">
-        
-    </div>
+    
+    <div class="col-md-3"></div>
 </div>
