--- a/AltaPerspectiva/src/Altaperspectiva.OpenId/Views/Account/Register.cshtml
+++ b/AltaPerspectiva/src/Altaperspectiva.OpenId/Views/Account/Register.cshtml
@@ -43,7 +43,7 @@
 
         <section>
 
-            <form asp-controller="Account" asp-action="Login" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal" role="form">
+            <form asp-controller="Account" asp-action="Register" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal" role="form">
 
                 <h2>Sign Up</h2>
                 <div asp-validation-summary="All" class="text-danger"></div>
