--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
@@ -1,59 +1,81 @@
 ﻿
 <div class="row">
-    <div class="col-md-3">
+    <div class="col-md3">
         <question-left-menu></question-left-menu>
     </div>
+    <div class="col-md8">
 
-    <div class="col-md-9">
         <div class="loader" *ngIf="loader.isLoading"></div>
+        <div class="row">
+            <img align="left" class="img-rounded img-category" src="{{categorySelected?.image}}" />
+            <h2 class="category-title">
+                {{categorySelected?.name}}
+            </h2>
+        </div>
+        <div class="row">
+            <button type="button" (click)="addFollower(categorySelected.id)" class="btn btn-lg">Follow</button>
+            <p>
+                {{categorySelected?.description}}
+            </p>
+        </div>
+        <div class="row">
+            <table class="table table-bordered table-nonfluid" width="200">
+                <tr>
+                    <td class="total">{{totalCount?.totalQuestions}} Questions </td>
+                    <td class="total">{{totalCount?.totalFollowers}} Followers</td>
+                </tr>
+            </table>
+        </div>
+        <div class="row pull-left">
+            <a class="active" (click)="getQuestionNotAnswered(categorySelected.id)"> Questions </a>
+            <a (click)="getQuestionsAnswered(categorySelected.id)">  Answers </a>
+        </div>
 
+        <div class="clearfix"></div>
         <div infinite-scroll
              [infiniteScrollDistance]="scrollDistance"
              [infiniteScrollThrottle]="throttle"
-             (scrolled)="onScrollDown()" class="col-md-9">
-
-            <div *ngFor="let question of questions" class="questions-container">
-                <div class="left-border">
-                    <img class="image-border" src="../../../../images/border.png" />
-                </div>
-                <div class="question-contents">
-                    <h3><a [routerLink]="['/question/detail',question.id]">&iquest;{{question.title}}?</a> </h3>
-                    <div>
-                        Categories: <h5 *ngFor="let c of question.categories" class="subtitle">{{c?.category.name}},&nbsp; </h5>
-                    </div>
-                    <div class="row ">
-                        <div class="article-details">
-                            <img class="user-image" src="../../../../images/avatar.png" />
-                            <!--<div class="header-info">{{question.user.name}},{{question.user.occupassion}}</div>-->
-                            <p [innerHTML]="question.body" class="answer-text"></p>
+             (scrolled)="onScrollDown()">
+        </div>
+        <div *ngFor="let question of questions">
+            <div class="panel-article">
+                <div class="row">
+                    <div class="col-sm-11 questions-container">
+                        <div class="left-border">
+                            <img class="image-border" src="../../../../images/border.png" />
+                        </div>
+                        <div class="question-contents">
+                            <h3><a [routerLink]="['/question/detail',question.id]">&iquest;{{question.title}}</a> </h3>
+                            <div>
+                                Categories: <h5 *ngFor="let c of question.categories; let i = index; let last = last" class="subtitle">{{c?.category.name}} <span *ngIf="!last">,&nbsp;</span> </h5>
+                            </div>
+                            <div class="article-details">
+                                <img class="user-image" src="../../../../images/avatar.png" />
+                                <!--<div class="header-info">{{question.user.name}},{{question.user.occupassion}}</div>-->
+                                <p [innerHTML]="question.body" class="answer-text"></p>
+                            </div>
+                            <hr />
                         </div>
                     </div>
-                    <hr />
                 </div>
             </div>
-
         </div>
-    </div>
-
-</div>
-
-
-
-
-   <!-- ==========Modal======= -->
-<div class="modal fade" id="myModal" role="dialog">
-    <div class="modal-dialog">
-        <!-- Modal content-->
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">Modal Header</h4>
-            </div>
-            <div class="modal-body">
-                <p>Some text in the modal.</p>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <!-- ==========Modal======= -->
+        <div class="modal fade" id="myModal" role="dialog">
+            <div class="modal-dialog">
+                <!-- Modal content-->
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">Modal Header</h4>
+                    </div>
+                    <div class="modal-body">
+                        <p>Some text in the modal.</p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
