--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tab-panel.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tab-panel.component.html
@@ -29,9 +29,9 @@
                             <img class="image-border" src="../../../../images/border.png" />
                         </div>
                         <div class="details-container">
-                            <h3><a>{{question.title}}</a></h3>
+                            <h3><a [routerLink]="['/question/detail',question.id]">{{question.title}}</a></h3>
                             Categories: <h5 *ngFor="let c of question.categories" class="subtitle">{{c?.category.name}},&nbsp; </h5>
-                            <p [innerHTML]="question.body"></p>
+                            <p [innerHTML]="question.lastAnswer?.text.substring(0,200)"></p>
                             <div class="status-panel">
                                 <hr />
                                 <img class="like-logo" src="../images/fade-logo.png" />
@@ -46,9 +46,8 @@
                                 <!-- social media icon -->
                                 <div class="social-icon">
                                     <img class="social-image" src="../images/facebooklogo.jpg" />
-                                    <img class="social-image" src="../images/twitter.png" />
-                                    <img class="social-image" src="../images/icon-external-link.png" />
-                                    <h5>Repuestus</h5><span class="counter-box">{{question.viewCount}}+</span>
+                                    <img class="social-image" src="../images/twitter.png" />                                    
+                                    <h5>Respuestas</h5><span class="counter-box">{{question.viewCount}}+</span>
                                 </div>
                             </div>
                         </div>
