--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
@@ -1,9 +1,9 @@
 ﻿
 <div class="row">
-    <div class="col-md3">
+    <div class="col-md-3">
         <question-left-menu></question-left-menu>
     </div>
-    <div class="col-md8">
+    <div class="col-md-8">
 
         <div class="loader" *ngIf="loader.isLoading"></div>
         <div class="row">
@@ -26,40 +26,82 @@
                 </tr>
             </table>
         </div>
-        <div class="row pull-left">
-            <a class="active" (click)="getQuestionNotAnswered(categorySelected.id)"> Questions </a>
-            <a (click)="getQuestionsAnswered(categorySelected.id)">  Answers </a>
+        <div class="row read-question-button">            
+            <button (click)="getQuestionNotAnswered(categorySelected.id)" type="button" class="btn btn-primary outline">
+                <span class="glyphicon glyphicon-question-sign"></span> Question
+            </button>
+            <button (click)="getQuestionsAnswered(categorySelected.id)" type="button" class="btn btn-primary outline">
+                <span class="glyphicon glyphicon-pencil"></span> Answers
+            </button>                   
         </div>
-
+         
         <div class="clearfix"></div>
         <div infinite-scroll
              [infiniteScrollDistance]="scrollDistance"
              [infiniteScrollThrottle]="throttle"
              (scrolled)="onScrollDown()">
         </div>
+        
         <div *ngFor="let question of questions">
-            <div class="panel-article">
-                <div class="row">
-                    <div class="col-sm-11 questions-container">
-                        <div class="left-border">
-                            <img class="image-border" src="../../../../images/border.png" />
+        <div class="panel-article">
+            <div class="row">
+                <div class="col-sm-11 questions-container">
+                    <div class="left-border">
+                        <img class="image-border" src="../../../../images/border.png" />
+                    </div>
+                    <div class="details-container">
+                        <h3><a [routerLink]="['/question/detail',question.id]">{{question.title}}</a> </h3>
+                        <div>
+                            Categories: <h5 *ngFor="let c of question.categories; let i = index; let last = last" class="subtitle">{{c?.category.name}} <span *ngIf="!last">,&nbsp;</span> </h5>
                         </div>
-                        <div class="question-contents">
-                            <h3><a [routerLink]="['/question/detail',question.id]">&iquest;{{question.title}}</a> </h3>
-                            <div>
-                                Categories: <h5 *ngFor="let c of question.categories; let i = index; let last = last" class="subtitle">{{c?.category.name}} <span *ngIf="!last">,&nbsp;</span> </h5>
+                        <div class="article-details">
+                            <img class="user-image" src="../../../../images/avatar.png" />
+                            <!--<div class="header-info">{{question.user.name}},{{question.user.occupassion}}</div>-->
+                            <div class="answer-text" [innerHTML]="question.lastAnswer?.text.substring(0,200)"></div>
+                            <div class="status-panel">
+                                <hr />
+                                <img class="like-logo" src="../images/fade-logo.png" />
+                                <!--<div class="status-line">{{answer.likes?.length}}</div>-->
+                                <div class="status-line">Like</div>
+                                <div class="status-line like-border"></div>
+                                <!--<div class="status-line">{{answer.comments?.length}}</div>-->
+                                <div class="status-line">Leidos</div>
+                                <a data-toggle="collapse" attr.data-target="#questionComment{{question.id}}" aria-expanded="false">
+                                    {{question.comments?.length}} comments
+                                </a>
+                                <!-- social media icon -->
+                                <div class="social-icon">
+                                    <img class="social-image" src="../images/facebooklogo.jpg" />
+                                    <img class="social-image" src="../images/twitter.png" />
+                                    <h5>Respuestas</h5><span class="counter-box">{{question.viewCount}}+</span>
+                                </div>
                             </div>
-                            <div class="article-details">
-                                <img class="user-image" src="../../../../images/avatar.png" />
-                                <!--<div class="header-info">{{question.user.name}},{{question.user.occupassion}}</div>-->
-                                <p [innerHTML]="question.body" class="answer-text"></p>
+                        </div>
+                        <div class="collapse comment-panel" id="questionComment{{question.id}}">
+                            <div class="comment-input">
+                                <img class="user-image comment-img" src="../../../../images/avatar.png" />
+                                <input class="form-control" />
+                                <button class="btn btn-info">comment</button>
                             </div>
-                            <hr />
+                            <!--<div class="card card-block">
+                                    <div *ngFor="let comment of question.comments">
+                                        <div class="row">
+                                            <div class="article-details" *ngIf="comment">
+                                                <img class="user-image comment-img" src="../../../../images/avatar.png" />
+                                                <div class="header-info">{{comment.user.name}},{{date.getMonthName(comment.time.getMonth())}} {{comment.time.getDate()}} {{comment.time.getFullYear()}}</div>
+                                                <p class="answer-text">{{comment.commentText}}</p>
+                                            </div>
+                                        </div>
+                                        <hr />
+                                    </div>
+                                </div>-->
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
+      
         <!-- ==========Modal======= -->
         <div class="modal fade" id="myModal" role="dialog">
             <div class="modal-dialog">
