--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.css
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.css
@@ -1,10 +1,45 @@
 ﻿
+.line-clamp {
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;  
+}
+
+.btn-primary.outline:hover, .btn-primary.outline:focus, .btn-primary.outline:active, .btn-primary.outline.active, .open > .dropdown-toggle.btn-primary {
+	color: #33a6cc;
+	border-color: #33a6cc;
+}
+.btn-primary.outline:active, .btn-primary.outline.active {
+	border-color: #007299;
+	color: #797575;
+	box-shadow: none;
+}
+
+.btn-primary {
+    color: #f6912b;
+    background-color: #eee;
+    border-color: #bec8d0;
+}
+
+.read-question-button {
+    margin-bottom:20px;
+}
 .img-category {
     width :50px;
     height :50px;
     margin: 0px 10px 10px 0px;
 }
-
+.questions-container{
+  margin-bottom: 0;
+  padding-bottom: 15px;
+  border-top:1px solid #eeeeee;  
+}
+.questions-container:hover{
+    background-color:#f5f5f5;    
+}
+.details-container{
+    margin-left:10px;
+}
 
 h5 {
     display: inline;
@@ -21,17 +56,6 @@ h2{
     width: 600px;
     margin: 150px auto;
 }
-
-.btn {
-    padding: 2px 12px;
-    border: 1px solid #bbcadc;
-    background-color: #f1f8fb;
-    color: #506db6;
-}
-
-    .btn:hover {
-        border-color: #2865a1;
-    }
 
 .user-image {
     height: 40px;
