Text changes in search panel and style chnaged

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/search.css
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/search.css
@@ -67,7 +67,7 @@ a {
 }
 
 .dropdown-menu-right {
-    right: 68px;
+    right: 0;
 }
 
 .lef-column {
@@ -195,6 +195,6 @@ label {
 }
 
 .search-menu {
-    min-width: 768px;
+    min-width: 840px;
     margin-top: 6px;
 }
