--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/apSearch.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/apSearch.component.html
@@ -3,7 +3,7 @@
 
         <form (ngSubmit)="submitQuestion()" #questionVM="ngForm" class="form-horizontal" role="form" id="search-panel">
 
-            <input type="text" class="form-control search-input fixed-height" #searchText placeholder="Ask here" id="title" autocomplete="off"
+            <input type="text" class="form-control search-input fixed-height" #searchText placeholder="Haz tu pregunta aquí o busca tus preguntas aquí" id="title" autocomplete="off"
                    [(ngModel)]="title" required name="titleName" #titleName="ngModel" (keyup)=filterQuestions() />
             <!--<div [hidden]="titleName.valid || titleName.pristine"
                  class="alert alert-danger">
@@ -36,6 +36,7 @@
                             <div class="question-components">
                                 <label> Categories &nbsp; </label>
                                 <select class="form-control catagory-dropdown" id="Category" required [(ngModel)]="categoryID" name="category" #category="ngModel">
+                                    
                                     <option *ngFor="let category of categories" [value]="category.id">
                                         {{category.name}}
                                     </option>
@@ -54,7 +55,7 @@
 
                         </div>
                     </div>
-                    <button type="submit" class="btn btn-primary fixed-height" [disabled]="!titleName.valid &&!category.valid"><span class="glyphicon glyphicon-search" aria-hidden="true"></span><span style="padding-left:5px">Ask</span></button>
+                    <button type="submit" class="btn btn-primary fixed-height" [disabled]="!titleName.valid &&!category.valid"><span class="glyphicon glyphicon-search" aria-hidden="true"></span><span style="padding-left:5px">Enviar</span></button>
                 </div>
             </div>
         </form>
