--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/apSearch.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/apSearch.component.html
@@ -34,9 +34,8 @@
                         <div id="question-details" class="dropdown-menu dropdown-menu-right search-menu" role="menu">
 
                             <div class="question-components">
-                                <label> Categories &nbsp; </label>
-                                <select class="form-control catagory-dropdown" id="Category" required [(ngModel)]="categoryID" name="category" #category="ngModel">
-                                    
+                                <select  class="form-control catagory-dropdown" id="Category" required [(ngModel)]="categoryID" name="category" #category="ngModel">
+                                    <option [value]="-1" disabled="true" selected>Selecciona la categoría</option>
                                     <option *ngFor="let category of categories" [value]="category.id">
                                         {{category.name}}
                                     </option>
@@ -46,7 +45,7 @@
                                 </div>
                             </div>
                             <div class="question-components">   
-                                <textarea  [(ngModel)]="body" [ngModelOptions]="{standalone: true}" rows="6" cols="86"></textarea>                             
+                                <textarea placeholder="Agrega detalle de tu pregunta - Optional"  [(ngModel)]="body" [ngModelOptions]="{standalone: true}" rows="6" cols="86"></textarea>                             
                                 <!--<ckeditor [(ngModel)]="body" [ngModelOptions]="{standalone: true}"
                                           [config]="{ removeButtons : 'About,Maximize,TextColor,Styles,Format,Font,FontSize,Flash,Table,HorizontalRule,Smiley,SpecialChar,PageBreak,Iframe,Link,Unlink,Anchor,BidiLtr,Language,BidiRtl,JustifyLeft,JustifyCenter,JustifyRight,JustifyBlock,CreateDiv,Blockquote,Outdent,Indent,BulletedList,NumberedList,CopyFormatting,RemoveFormat,Underline,Strike,Subscript,Superscript,Form,Radio,TextField,Textarea,Select,Button,ImageButton,HiddenField,Scayt,Find,SelectAll,Replace,BGColor,ShowBlocks,Checkbox,Source,Save,Templates,Cut,Undo,Redo,Copy,Paste,PasteText,PasteFromWord,Print,Preview,NewPage,Checkbox'}"
                                           debounce="500">
