--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tab-panel.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tab-panel.component.html
@@ -30,6 +30,8 @@
                         </div>
                         <div class="details-container">
                             <h3><a [routerLink]="['/question/detail',question.id]">{{question.title}}</a></h3>
+                            <img class="user-image" src="../../../../images/avatar.png" />
+                            <div class="header-info">User name, occupation name </div>
                             Categories: <h5 *ngFor="let c of question.categories" class="subtitle">{{c?.category.name}},&nbsp; </h5>
                             <p [innerHTML]="question.lastAnswer?.text.substring(0,200)"></p>
                             <div class="status-panel">
